# naked-agents

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  format.rs  main.rs  model.rs  search.rs  tui.rs
src/source/: claude.rs  codex.rs  mod.rs
