[package]
name = "naked-agents"
version = "0.1.0"
edition = "2021"
description = "Viewer, browser, and searcher for Claude Code and Codex sessions"
license = "MIT"

[[bin]]
name = "naked"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
crossterm = "0.28"
unicode-width = "0.2"
comfy-table = "7"

[dev-dependencies]
pretty_assertions = "1"
